fixed margin and also overflow institution location section

--- a/CMS/static/scss/global.scss
+++ b/CMS/static/scss/global.scss
@@ -46,7 +46,7 @@ a {
 
 @media only screen and (min-width: 770px) {
   .discover-uni-container {
-    max-width: 1020px;
+    max-width: 11490px;
     margin-right: auto;
     margin-left: auto;
   }
